Opened 12 years ago

Closed 10 years ago

#3530 closed defect (fixed)

AIFF playback/Transcode failure

Reported by: DeShizz Owned by:
Priority: important Component: avformat
Version: git-master Keywords: aif id3v2 regression
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

Summary of the bug:

ffmpeg fails when attempting to transcode certain AIFF files with the four letter .aiff extension (using Zeranoe's static 32bit build).

The file used in the transcoding process is available here: https://www.dropbox.com/s/i58yu1qunn3jykj/01%20Boom%20Boom%20Pow.aiff

The above file was created using dBpoweramp and tagged using Pa-Software's ID3 Editor.

I will conduct further tests with different files if need be.

How to reproduce:

% ffmpeg -i 01 Boom Boom Pow.aiff -ab 320k 01 Boom Boom Pow.mp3

ffmpeg version N-62058-gfd2bcfc Copyright (c) 2000-2014 the FFmpeg developers
  built on Apr  2 2014 22:02:20 with gcc 4.8.2 (GCC)

The output of the above command is as such, verbatim:

Microsoft Windows [Version 6.1.7601]
Copyright (c) 2009 Microsoft Corporation.  All rights reserved.

C:\Users\User> ffmpeg.exe -v 9 -loglevel 99 -i "C:\Users\User\Desktop\01 Bo
om Boom Pow.aiff" -ab 320k "C:\Users\User\Desktop\01 Boom Boom Pow.mp3"
ffmpeg version N-62058-gfd2bcfc Copyright (c) 2000-2014 the FFmpeg developers
  built on Apr  2 2014 22:02:20 with gcc 4.8.2 (GCC)
  configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-av
isynth --enable-bzlib --enable-fontconfig --enable-frei0r --enable-gnutls --enab
le-iconv --enable-libass --enable-libbluray --enable-libcaca --enable-libfreetyp
e --enable-libgsm --enable-libilbc --enable-libmodplug --enable-libmp3lame --ena
ble-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenjpeg --enable-l
ibopus --enable-librtmp --enable-libschroedinger --enable-libsoxr --enable-libsp
eex --enable-libtheora --enable-libtwolame --enable-libvidstab --enable-libvo-aa
cenc --enable-libvo-amrwbenc --enable-libvorbis --enable-libvpx --enable-libwavp
ack --enable-libx264 --enable-libx265 --enable-libxavs --enable-libxvid --enable
-zlib
  libavutil      52. 71.100 / 52. 71.100
  libavcodec     55. 56.107 / 55. 56.107
  libavformat    55. 36.101 / 55. 36.101
  libavdevice    55. 11.100 / 55. 11.100
  libavfilter     4.  3.100 /  4.  3.100
  libswscale      2.  6.100 /  2.  6.100
  libswresample   0. 18.100 /  0. 18.100
  libpostproc    52.  3.100 / 52.  3.100
Splitting the commandline.
Reading option '-v' ... matched as option 'v' (set logging level) with argument
'9'.
Reading option '-loglevel' ... matched as option 'loglevel' (set logging level)
with argument '99'.
Reading option '-i' ... matched as input file with argument 'C:\Users\User\Deskt
op\01 Boom Boom Pow.aiff'.
Reading option '-ab' ... matched as AVOption 'ab' with argument '320k'.
Reading option 'C:\Users\User\Desktop\01 Boom Boom Pow.mp3' ... matched as outpu
t file.
Finished splitting the commandline.
Parsing a group of options: global .
Applying option v (set logging level) with argument 9.
Successfully parsed a group of options.
Parsing a group of options: input file C:\Users\User\Desktop\01 Boom Boom Pow.ai
ff.
Successfully parsed a group of options.
Opening an input file: C:\Users\User\Desktop\01 Boom Boom Pow.aiff.
[aiff @ 0286d8e0] Format aiff probed with size=2048 and score=100
[aiff @ 0286d8e0] id3v2 ver:4 flags:00 len:139510
[aiff @ 0286d8e0] id3v2 ver:32 flags:02 len:69215428
[aiff @ 0286d8e0] ID3v2.32 tag skipped, cannot handle version
[AVIOContext @ 02863400] Statistics: 204988 bytes read, 2 seeks
C:\Users\User\Desktop\01 Boom Boom Pow.aiff: Input/output error

Attachments (1)

Apache_cut.aif (2.4 MB ) - added by Carl Eugen Hoyos 12 years ago.

Change History (11)

comment:1 by Carl Eugen Hoyos, 12 years ago

Component: ffmpegavformat
Keywords: aiff id3v2 regression added; AIFF ID3 removed
Priority: normalimportant
Reproduced by developer: set
Status: newopen
Version: 2.2git-master

Regression since c68a8a13

comment:2 by Carl Eugen Hoyos, 12 years ago

Resolution: fixed
Status: openclosed

Fixed by Peter Ross in 5331773c - thank you for the report!

comment:3 by Carl Eugen Hoyos, 12 years ago

Keywords: aif added; aiff removed

comment:4 by Carl Eugen Hoyos, 12 years ago

I was unable to backport the fix for this ticket to release/1.2, what I had committed broke fate.

comment:5 by Hendrik Schreiber, 12 years ago

Resolution: fixed
Status: closedreopened

The fix works with the provided test file, but I'm under the impression that it's not a universal fix.

I tested against https://www.dropbox.com/s/8l9oa1595wd3j43/Apache.aif

Using the static 64-bit build from http://ffmpeg.zeranoe.com/builds/win64/static/ffmpeg-20140727-git-ad91bf8-win64-static.7z, I got this:

Z:\ffmpeg\ffmpeg-20140727-git-ad91bf8-win64-static\bin>ffplay -v 100 Apache.aif
ffplay version N-65018-gad91bf8 Copyright (c) 2003-2014 the FFmpeg developers
  built on Jul 26 2014 22:09:15 with gcc 4.8.3 (GCC)
  configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-av
isynth --enable-bzlib --enable-fontconfig --enable-frei0r --enable-gnutls --enab
le-iconv --enable-libass --enable-libbluray --enable-libbs2b --enable-libcaca --
enable-libfreetype --enable-libgme --enable-libgsm --enable-libilbc --enable-lib
modplug --enable-libmp3lame --enable-libopencore-amrnb --enable-libopencore-amrw
b --enable-libopenjpeg --enable-libopus --enable-librtmp --enable-libschroedinge
r --enable-libsoxr --enable-libspeex --enable-libtheora --enable-libtwolame --en
able-libvidstab --enable-libvo-aacenc --enable-libvo-amrwbenc --enable-libvorbis
 --enable-libvpx --enable-libwavpack --enable-libwebp --enable-libx264 --enable-
libx265 --enable-libxavs --enable-libxvid --enable-decklink --enable-zlib
  libavutil      52. 92.101 / 52. 92.101
  libavcodec     55. 69.100 / 55. 69.100
  libavformat    55. 49.100 / 55. 49.100
  libavdevice    55. 13.102 / 55. 13.102
  libavfilter     4. 11.102 /  4. 11.102
  libswscale      2.  6.100 /  2.  6.100
  libswresample   0. 19.100 /  0. 19.100
  libpostproc    52.  3.100 / 52.  3.100
[aiff @ 0000000002aa0340] Format aiff probed with size=2048 and score=100
[aiff @ 0000000002aa0340] id3v2 ver:3 flags:00 len:313
[aiff @ 0000000002aa0340] id3v2 ver:32 flags:00 len:84649156
[aiff @ 0000000002aa0340] ID3v2.32 tag skipped, cannot handle version
[AVIOContext @ 0000000002a9fd80] Statistics: 65536 bytes read, 2 seeks
Apache.aif: Input/output error

The same build works fine with the original test file "01 Boom Boom Pow.aiff".

by Carl Eugen Hoyos, 12 years ago

Attachment: Apache_cut.aif added

comment:6 by Michael Niedermayer, 11 years ago

Resolution: fixed
Status: reopenedclosed

comment:7 by Matt, 11 years ago

This bug is still present in the static binary release for mac 64bit version 2.6.3

However, it seems that all of the snapshot builds that I personally have tested appear to work just fine. I'm not sure what difference in method or practice may exist for producing these builds but it is clearly still an issue in your official release builds.

comment:8 by Matt, 11 years ago

Resolution: fixed
Status: closedreopened

comment:9 by Carl Eugen Hoyos, 11 years ago

Why are you interested in a release build (there is nothing official about it)? All releases have more bugs and less features than a snapshot.

comment:10 by Elon Musk, 10 years ago

Resolution: fixed
Status: reopenedclosed
Note: See TracTickets for help on using tickets.