libavformat/dsfdec.c
@@ -52,7 +52,7 @@ static void read_id3(AVFormatContext *s, uint64_t id3pos)
     if (avio_seek(s->pb, id3pos, SEEK_SET) < 0)
         return;
 
-    ff_id3v2_read(s, ID3v2_DEFAULT_MAGIC, &id3v2_extra_meta);
+    ff_id3v2_read(s, ID3v2_DEFAULT_MAGIC, &id3v2_extra_meta, 0);
     if (id3v2_extra_meta)
         ff_id3v2_parse_apic(s, &id3v2_extra_meta);
     ff_id3v2_free_extra_meta(&id3v2_extra_meta);
